--- a/wisdom-share/demo/pom.xml
+++ b/wisdom-share/demo/pom.xml
@@ -27,8 +27,10 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
-	</properties>
+    <java.version>17</java.version>               <!-- or 21 if you're using it -->
+    <mapstruct.version>1.6.3</mapstruct.version>  <!-- latest stable as of early 2026 -->
+    <lombok.version>1.18.34</lombok.version>     <!-- update if yours is old -->
+</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -114,6 +116,20 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- MapStruct runtime (needed for compilation & runtime) -->
+<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct</artifactId>
+    <version>${mapstruct.version}</version>
+</dependency>
+
+<!-- MapStruct annotation processor (generates Impl classes) -->
+<dependency>
+    <groupId>org.mapstruct</groupId>
+    <artifactId>mapstruct-processor</artifactId>
+    <version>${mapstruct.version}</version>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
 
 	<build>
