--- a/wisdom-share/demo/src/main/resources/application.yml
+++ b/wisdom-share/demo/src/main/resources/application.yml
@@ -21,6 +21,9 @@ application:
   mailing:
     frontend:
       activation-url: http://localhost:8080/api/auth/activate?token=
+  file:
+   upload: 
+    photos-output-path: ./uploads 
   security:
     jwt:
       secret-key: a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0   # ← Add this!
