--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,9 @@
 services:
-  postgres:
-    container_name: postgres-sql-bsn
-    image: postgres
+  db:
+    image: 'postgres:latest'
     environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
-      PGDATA: /var/lib/postgresql/data
-      POSTGRES_DB: wisdomshare
-    volumes:
-      - postgres:/data/postgres
+      - 'POSTGRES_DB=book_social_network'
+      - 'POSTGRES_PASSWORD=password'
+      - 'POSTGRES_USER=postgres'
     ports:
-      - 5432:5432
-    networks:
-      - spring-demo
-    restart: unless-stopped
-  mail-dev:
-    container_name: mail-dev-bsn
-    image: maildev/maildev
-    ports:
-      - 1080:1080
-      - 1025:1025
-  keycloak:
-    container_name: keycloak-bsn
-    image: quay.io/keycloak/keycloak:24.0.2
-    ports:
-      - 9090:8080
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    networks:
-      - spring-demo
-    command:
-      - "start-dev"
-networks:
-  spring-demo:
-    driver: bridge
-
-volumes:
-  postgres:
-    driver: local
-  keycloak:
-    driver: local
+      - '5432:5432'
