--- a/wisdomshare-ui/package.json
+++ b/wisdomshare-ui/package.json
@@ -35,6 +35,7 @@
     "@angular/ssr": "^21.1.3",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
